--- a/hacks/sketchfab1.html
+++ b/hacks/sketchfab1.html
@@ -127,7 +127,7 @@
         }
 
         function openModelInNewTab(uid) {
-            const url = `sketchfab-downloader.html?modelUid=${uid}`;
+            const url = `sketchfab2.html?modelUid=${uid}`;
             const newWindow = window.open(url, '_blank');
         }
 
