--- a/hacks/sketchfab2.html
+++ b/hacks/sketchfab2.html
@@ -7,9 +7,10 @@
     <script type="text/javascript" src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
 </head>
 
-<body>
-
-    <iframe src="" id="api-frame" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<body style="margin:0;" >
+<center>
+    <iframe style="border:0;width:50%;" src="" id="api-frame" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</center>
     <script type="text/javascript">
     // Function to get URL parameters
     function getUrlParameter(name) {
